--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2{
     /* font-size: 40px; */
    
     font-family: monospace;
-    padding-right: 110px;
+    /* padding-right: 110px; */
     /* background-color: blue; */
 }
 p{
@@ -58,7 +58,10 @@ button{
         justify-content: center;
     }
     .left-img img{
-        width:280px;
+        align-items: center;
+        justify-content: center;
+        margin: auto;
+        width:290px;
         height:235px;
     }
 }
